fix pom.xml, tests and some issues with chatter