@@ -6,8 +6,6 @@ import org.junit.Test;
 import java.util.Collections;
 import java.util.List;
 
-
-// junit 4.12 + hamcrest-core 1.3 libs are required to run tests
 public class BlockchainTest {
 
 
@@ -15,12 +13,13 @@ public class BlockchainTest {
     public void duplicateValidAddBlockTest() {
         Blockchain blockchain = new Blockchain(0);
         // todo hardcode here bloch with params which generates valid block for 0 or whatsoever complexity
-        Block firstBlock = new Block("0", 0, 0, Collections.emptyList());
+        Block firstBlock = new Block("0", 0, 0, List.of(new Message(new User("usr1"), "text", 0l)));
         firstBlock.setTimeStampFinish(Long.MAX_VALUE);
 
         blockchain.addBlock(firstBlock);
 
-        Block secondBlock = new Block(firstBlock.getHash(), 0, 0, Collections.emptyList());
+        Block secondBlock = new Block(firstBlock.getHash(), 0, 0, List.of(new Message(new User("usr1"), "text", 0l)));
+        secondBlock.setTimeStampFinish(Long.MAX_VALUE);
         blockchain.addBlock(secondBlock);
 
         Assert.assertEquals(1, blockchain.getBlockCount());
@@ -28,19 +27,21 @@ public class BlockchainTest {
     }
 
     @Test
-    public void duplicateInvalidAddBlockTest() {
+    public void InvalidAddBlockTest() {
         Blockchain blockchain = new Blockchain(0);
-        Block block = new Block("0", 0, 0, Collections.emptyList());
+        Block block = new Block("0", 0, 0, List.of(new Message(new User("usr1"), "text", 0l)));
         blockchain.addBlock(block);
-        blockchain.addBlock(block);
+        Block secondBlock = new Block("0", 0, 0, Collections.emptyList());
+        blockchain.addBlock(secondBlock);
 
-        Assert.assertEquals(0, blockchain.getBlockCount());
+        Assert.assertEquals(1, blockchain.getBlockCount());
     }
 
     @Test
     public void invalidPrevHashAddBlockTest() {
         Blockchain blockchain = new Blockchain(0);
-        Block block = new Block("12131212121212", 0, 0, Collections.emptyList());
+        Block block = new Block("12131212121212", 0, 0, List.of(new Message(new User("usr1"), "text", 0l)));
+        block.setTimeStampFinish(System.currentTimeMillis());
         blockchain.addBlock(block);
 
         Assert.assertEquals(0, blockchain.getBlockCount());
@@ -49,19 +50,19 @@ public class BlockchainTest {
     @Test
     public void emptyAddBlockTest() {
         Blockchain blockchain = new Blockchain(0);
-        Block block = new Block("0", 0, 0, Collections.emptyList());
+        Miner miner = new Miner(blockchain, 0);
+        Block block = miner.mineBlock(Collections.emptyList());
         blockchain.addBlock(block);
 
         Assert.assertEquals(0, blockchain.getBlockCount());
     }
 
     @Test
-    public void notCalculatedAddBlockTest() {
+    public void AddBlockTest() {
         Blockchain blockchain = new Blockchain(0);
         Block block = new Block("0", 0, 0, List.of(new Message(new User("usr1"), "text", 0l)));
+        block.setTimeStampFinish(Long.MAX_VALUE);
         blockchain.addBlock(block);
-
-        Assert.assertEquals(0, blockchain.getBlockCount());
+        Assert.assertEquals(1, blockchain.getBlockCount());
     }
-
 }
